--- a/README
+++ b/README
@@ -5,6 +5,29 @@
 4.Dump in bracketed format in voicedir/prosdoy_feats as .break, .prom, .Ipeak and .Ivalley
 5 add word, syl and phone feats to utts
 6. Add appropriate pathnames to mcep.desc
+
+Phrase Breaks:
+( R:mcep_link.parent.R:segstate.parent.R:SylStructure.parent.parent.pt_break float)
+( R:mcep_link.parent.R:segstate.parent.R:SylStructure.parent.parent.R:Word.n.pt_break float)
+( R:mcep_link.parent.R:segstate.parent.R:SylStructure.parent.parent.R:Word.p.pt_break float)
+
+Prominence:
+( R:mcep_link.parent.R:segstate.parent.R:SylStructure.parent.pt_prom float)
+( R:mcep_link.parent.R:segstate.parent.R:SylStructure.parent.R:Syllable.p.pt_prom float)
+( R:mcep_link.parent.R:segstate.parent.R:SylStructure.parent.R:Syllable.n.stress float)
+( R:mcep_link.parent.R:segstate.parent.R:SylStructure.parent.R:Syllable.n.pt_prom float)
+
+Intensity:
+( R:mcep_link.parent.R:segstate.parent.Ivalley float)
+( R:mcep_link.parent.R:segstate.parent.n.Ivalley float)
+( R:mcep_link.parent.R:segstate.parent.p.Ivalley float)
+( R:mcep_link.parent.R:segstate.parent.Ipeak float)
+( R:mcep_link.parent.R:segstate.parent.n.Ipeak float)
+( R:mcep_link.parent.R:segstate.parent.p.Ipeak float)
+
 7. Cluster
 8. Synthesize
 
+./setup /path/to/voicedir
+cd /path/to/voicedir
+./do_prosody_build
